--- a/assignment6/src/main/res/layout/dialog_add_news.xml
+++ b/assignment6/src/main/res/layout/dialog_add_news.xml
@@ -7,7 +7,7 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add New News"
+        android:text="@string/s_add_new_news"
         android:textStyle="bold"
         android:textSize="18sp" />
 
@@ -20,7 +20,7 @@
             android:id="@+id/imageUrl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="News Image Url" />
+            android:hint="@string/s_news_image_url" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -33,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minLines="3"
-            android:hint="News Title" />
+            android:hint="@string/s_news_title" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -46,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minLines="4"
-            android:hint="News Description" />
+            android:hint="@string/s_news_description" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
@@ -63,7 +63,7 @@
             android:padding="12dp"
             android:background="@null"
             android:textAllCaps="false"
-            android:text="Cancel" />
+            android:text="@string/s_cancel" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/addBtn"
@@ -72,6 +72,6 @@
             android:padding="12dp"
             android:background="@android:color/transparent"
             android:textAllCaps="false"
-            android:text="Add" />
+            android:text="@string/s_add" />
     </LinearLayout>
 </LinearLayout>
