--- a/uikit/src/main/res/values/styles.xml
+++ b/uikit/src/main/res/values/styles.xml
@@ -11,4 +11,13 @@
         <item name="android:padding">12dp</item>
     </style>
 
+    <style name="FAB">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">bottom|end</item>
+        <item name="android:layout_margin">16dp</item>
+        <item name="shapeAppearanceOverlay">?attr/shapeAppearanceCornerExtraLarge</item>
+        <item name="srcCompat">@drawable/ic_add</item>
+    </style>
+
 </resources>
