--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,6 +81,14 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/asm6" />
+
+        <Button
+            android:id="@+id/extra"
+            style="@style/PrimaryButton"
+            android:text="@string/app_extra"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/asm7" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
